--- a/index.html
+++ b/index.html
@@ -1,12 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-	<meta charset="UTF-8">
-	<meta name="theme-color" content="blue">
-	<link rel="stylesheet" href="style.css">
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
-		integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+	<head>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<!-- Bootstrap CSS -->
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+		  integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+		<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+		  integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+		  crossorigin="anonymous"></script>
+		<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+		  integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+		  crossorigin="anonymous"></script>
+		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+		  integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+		  crossorigin="anonymous"></script>
+		<script src="https://kit.fontawesome.com/cd45339113.js" crossorigin="anonymous"></script>
+		<link
+		  href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@500&family=Cookie&family=Monoton&family=Teko:wght@300&display=swap"
+		  rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css2?family=Cookie&family=Monoton&family=Teko:wght@300&display=swap"
+		  rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed&display=swap" rel="stylesheet">
+	  
+		<link href="https://fonts.googleapis.com/css2?family=Barlow:ital,wght@1,500&family=Lobster&display=swap"
+		  rel="stylesheet">
+		<link rel="stylesheet" type="text/css" href="style.css">
+
 	<title>Slightly Doped</title>
 </head>
 
@@ -79,25 +100,29 @@
 
 
 	<!-- Footer -->
-	<footer class="footer">
-		<div class="container">
-	
-			<div class="row">
-				<ul>
-					<li class="tg-facebook"><a href="#"><i class="fa fa-facebook"></i></a></li>
-					<li class="tg-twitter"><a href="#"><i class="fa fa-twitter"></i></a></li>
-					<li class="tg-linkedin"><a href="#"><i class="fa fa-linkedin"></i></a></li>
-	
-				</ul>
-				<div>
-					<p>© Slightly Doped 2020</p>
-				</div>
-			</div>
-	
-	
+
+	<div id="footer" class="exp">
+		<div id="socialmediaicons">
+		  <span class="fa-stack fa-lg">
+			<a href="https://www.facebook.com"><i class="fab fa-facebook fa-stack-1x fa-inverse"></i></a>
+		  </span>
+		  <span class="fa-stack fa-lg">
+			<a href="https://www.twitter.com"><i class="fab fa-twitter fa-stack-1x fa-inverse"></i></a>
+		  </span>
+		  <span class="fa-stack fa-lg">
+			<a href="https://www.github.com"> <i class="fab fa-github fa-stack-1x fa-inverse"></i></a>
+		  </span>
+		  <span class="fa-stack fa-lg">
+			<a href="https://www.instagram.com"><i class="fab fa-instagram fa-stack-1x fa-inverse"></i></a>
+		  </span>
+		  <span class="fa-stack fa-lg">
+			<a href="https://www.linkedin.com"><i class="fab fa-linkedin fa-stack-1x fa-inverse"></i></a>
+		  </span>
 		</div>
+		<p style="color:rgba(255,255,255,0.5)">&#169 2020 <span style="color:rgba(255,255,255,1)">Slightly Doped. </span>All
+		  rights reserved</p>
+	  </div>
 	
-	</footer>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
