--- a/index.html
+++ b/index.html
@@ -87,28 +87,40 @@
 
 	<!-- Carousel -->
 
-	<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+	<div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
 		<ol class="carousel-indicators">
-		  <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-		  <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-		  <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+		  <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+		  <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+		  <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
 		</ol>
 		<div class="carousel-inner">
 		  <div class="carousel-item active">
-			<img class="d-block w-100" src="..." alt="First slide">
+			<img src="img1.jpg" class="d-block w-100" alt="...">
+			<div class="carousel-caption d-none d-md-block">
+			  <h5>Slightly-Doped</h5>
+			  <p></p>
+			</div>
 		  </div>
 		  <div class="carousel-item">
-			<img class="d-block w-100" src="..." alt="Second slide">
+			<img src="img2.jpg" class="d-block w-100" alt="...">
+			<div class="carousel-caption d-none d-md-block">
+			  <h5>Scroll Down to Know More !</h5>
+			  <p></p>
+			</div>
 		  </div>
 		  <div class="carousel-item">
-			<img class="d-block w-100" src="..." alt="Third slide">
+			<img src="img3.jpg" class="d-block w-100" alt="...">
+			<div class="carousel-caption d-none d-md-block">
+			  <h5>The Smartest e-learning Platform!</h5>
+			  <p></p>
+			</div>
 		  </div>
 		</div>
-		<a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+		<a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
 		  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
 		  <span class="sr-only">Previous</span>
 		</a>
-		<a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+		<a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
 		  <span class="carousel-control-next-icon" aria-hidden="true"></span>
 		  <span class="sr-only">Next</span>
 		</a>
