Shortcut Icon Added

--- a/index.html
+++ b/index.html
@@ -23,10 +23,11 @@
 		<link href="https://fonts.googleapis.com/css2?family=Cookie&family=Monoton&family=Teko:wght@300&display=swap"
 		  rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed&display=swap" rel="stylesheet">
-	  
 		<link href="https://fonts.googleapis.com/css2?family=Barlow:ital,wght@1,500&family=Lobster&display=swap"
 		  rel="stylesheet">
 		<link rel="stylesheet" type="text/css" href="style.css">
+
+		<link rel="shortcut icon" href="sd.jpg" type="image/x-icon" />
 
 	<title>Slightly Doped</title>
 </head>
