--- a/index.html
+++ b/index.html
@@ -140,7 +140,21 @@
 
 		</div>
 	</div>
-
+	
+	<!-- About Us -->
+	<div id = "about us">
+		</br>
+		<h1><span>About Us</span></h1>
+		<p>
+			Hello, we are an Indian start-up whose motive is to bridge the gap between theory and practical experinece in
+			technical education. We have a group of fellow engineers from reputed colleges and universities accross the India.
+			We help you to enhance your problem-solving skills whether the problem is related to software or hardware. We explain 
+			things using practical and real life issues and also teach you the latest tools you need to know for your growth. 
+			Whether you want to learn <i>programming</i>, <i>hardware design</i>, various <i>engineering tools</i> or want to know 
+			about <i>latest events and contests</i>, <Strong>Slightly Doped</Strong> will always be there for you. It is 
+			always fun to learn and work with us. We would love to see you in our community.
+		</p>
+	</div>
 
 
 	<!-- Footer -->
