connected about us section with navigation list

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 					<a class="nav-link" href="#">Blog</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="#">About Us</a>
+					<a class="nav-link" href="#aboutus">About Us</a>
 				</li>
 				<li class="nav-item">
 					<a class="nav-link" href="#">Contact</a>
@@ -142,10 +142,8 @@
 	</div>
 	
 	<!-- About Us -->
-	<div id = "about us">
-
+	<div id = "aboutus">
 		</br>
-
 		<h1><span>About Us</span></h1>
 		<p>
 			Hello, we are an Indian start-up whose motive is to bridge the gap between theory and practical experinece in
