Added ContactUs section and fixed spelling mistake

--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
 
 	<head>
-	<link href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap" rel="stylesheet">
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<!-- Bootstrap CSS -->
@@ -26,6 +25,7 @@
 		<link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed&display=swap" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css2?family=Barlow:ital,wght@1,500&family=Lobster&display=swap"
 		  rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap" rel="stylesheet">
 		<link rel="stylesheet" type="text/css" href="style.css">
 
 		<link rel="shortcut icon" href="sd.jpg" type="image/x-icon" />
@@ -148,7 +148,7 @@
 		<h1><span>About Us</span></h1>
 		<p>
 			Hello, we are an Indian start-up whose motive is to bridge the gap between theory and practical experinece in
-			technical education. We have a group of fellow engineers from reputed colleges and universities accross the India.
+			technical education. We have a group of fellow engineers from reputed colleges and universities across the India.
 			We help you to enhance your problem-solving skills whether the problem is related to software or hardware. We explain 
 			things using practical and real life issues and also teach you the latest tools you need to know for your growth. 
 			Whether you want to learn <i>programming</i>, <i>hardware design</i>, various <i>engineering tools</i> or want to know 
@@ -156,7 +156,20 @@
 			always fun to learn and work with us. We would love to see you in our community.
 		</p>
 	</div>
-
+	
+	<!-- Contact Us-->
+	<div id = "contactUs">
+		<h1><span>Contact Us</span></h1></br>
+		<div class="leftSide">
+			<input type="text" class="inputField" placeholder="Full Name"></br>
+			<input type="email" class="inputField" placeholder="E-mail"></br>
+			<input type="text" class="inputField" placeholder="Phone No."></br>
+		</div>
+		<div class="rightSide">
+			<textarea class="inputField" placeholder="Message"></textarea>
+		</div>
+		
+	</div>
 
 	<!-- Footer -->
 
@@ -188,4 +201,3 @@
 </body>
 
 </html>
-
