Added Submit Button

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 		<div class="rightSide">
 			<textarea class="inputField" placeholder="Message"></textarea>
 		</div>
-		
+		<button id="submitButton" class="submitButton" type="submit">Submit</button>
 	</div>
 
 	<!-- Footer -->
