Card Images updated

--- a/index.html
+++ b/index.html
@@ -130,9 +130,9 @@
 		</div>
 	</div>
 	
-	<div class="card-deck">
+	<div class="card-deck" style="margin: 20px;">
 	  <div class="card">
-	    <img class="card-img-top" src="..." alt="Card image cap">
+	    <img class="card-img-top" src="img1.jpg" alt="Card image cap">
 	    <div class="card-body">
 	      <h5 class="card-title">Card title</h5>
 	      <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -140,7 +140,7 @@
 	    </div>
 	  </div>
 	  <div class="card">
-	    <img class="card-img-top" src="..." alt="Card image cap">
+	    <img class="card-img-top" src="img2.jpg" alt="Card image cap">
 	    <div class="card-body">
 	      <h5 class="card-title">Card title</h5>
 	      <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
@@ -148,7 +148,7 @@
 	    </div>
 	  </div>
 	  <div class="card">
-	    <img class="card-img-top" src="..." alt="Card image cap">
+	    <img class="card-img-top" src="img3.jpg" alt="Card image cap">
 	    <div class="card-body">
 	      <h5 class="card-title">Card title</h5>
 	      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
