--- a/index.html
+++ b/index.html
@@ -157,7 +157,8 @@
 			things using practical and real life issues and also teach you the latest tools you need to know for your growth. 
 			Whether you want to learn <i>programming</i>, <i>hardware design</i>, various <i>engineering tools</i> or want to know 
 			about <i>latest events and contests</i>, <Strong>Slightly Doped</Strong> will always be there for you. It is 
-			always fun to learn and work with us. We would love to see you in our community.
+			always fun to learn and work with us. We would love to see you in our community. Sharing is caring!
+			
 		</p>
 	</div>
 	
