--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 					<a class="nav-link" href="#aboutus">About Us</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="#contactUs">Contact</a>
+					<a class="nav-link" href="#contactUs">Contact Us</a>
 				</li>
 				<li class="nav-item">
 					<a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
